[package]
name = "fix-api-lib"
version = "0.0.1"
description = "A fix api library"
authors = ["anonymous"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/k-matsuzawa/fix-test-client-app/tree/main/rust-packages/fix-api-lib"
edition = "2021"
rust-version = "1.70"

[dependencies]
fefix = "0.7.0"
log = "~0.4"
tracing = "0.1.37"
serde_json = "~1.0"
serde = { version = "~1.0", features = ["derive"] }
hex = "~0.4"
sha2 = "0.10.7"
